@@ -1,7 +1,7 @@
 PKG=UPimapproxy
 NAME=up-imapproxy
 ARCH=sparc
-VERSION=1.2.2rc1
+VERSION=1.2.2rc2
 CATEGORY=application
 VENDOR=www.imapproxy.org
 DESC=This is a connection caching imapproxy daemon for proxied imap connections
